Bug 1504592 - Mark the right frame modified when caret changes. r=tnikkel, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D11316

--HG--
extra : source : ed759d2a9effc6d48c5130d4a199ca618cb998a3